# dineshlib

./: .gitignore  CLAUDE.md  README.md
.cargo/: config.toml
capitals/: Cargo.toml
capitals/src/: main.rs
weather/: Cargo.toml
weather/src/: main.rs
