[package]
name = "weather"
version = "0.1.0"
edition = "2021"
description = "Fetches tomorrow's weather forecast — part of dineshlib"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
